# adminpdftoolkit

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHROME_EXTENSION_ROADMAP.md  CODE_OF_CONDUCT.md  CODE_SIGNING.md  CONTRIBUTING.md  Dockerfile  Engellemeyi Kaldir.bat  LICENSE.installer.txt  LICENSE.tr.txt  NOTICE.txt  Portable Paket.bat  README.en.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_2026_05_10.md  Servis Yoneticisi.bat  Sunucuyu Başlat.bat  THIRD_PARTY_LICENSES.md  app.py  app_http.py  build_exe.py  build_installer.py  build_portable.py  build_setup_inno.py  build_setup_offline.py  docker-compose.yml  installer.py  launcher.py  launcher_version_info.txt  pdf_converter.py  pdf_safety.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  REPO_STANDARDS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
core/: __init__.py  analysis.py  batch.py  clamav_daemon.py  clamav_update.py  cleanup.py  converters.py  distribution.py  editor.py  errors.py  files.py  fonts.py  history_db.py  jobs.py  logging_setup.py  metadata.py  network.py  ocr_preload.py  pdf_tools.py  security.py
parsers/: __init__.py  base.py  call_log_360.py  generic_table.py  registry.py  scanned.py
pipelines/: __init__.py  batch_convert.py  convert.py  ocr.py  safety.py
routers/: __init__.py  admin.py  batch.py  convert.py  editor.py  history.py  ocr.py  pdf_tools.py
scripts/: bench_perf.py  check_packaging.py  setup_clamav.py  setup_editor_assets.py
static/: dashboard-preview.html  i18n.js  manifest.json  pdf-editor.mjs  sw.js
templates/: index.html
tests/: conftest.py  test_api.py  test_app_http.py  test_batch_convert_worker.py  test_batch_pipeline_helpers.py  test_call_log_parser.py  test_clamav_update.py  test_convert_sync.py  test_dashboard_cards.py  test_distribution.py  test_history_db.py  test_parsers_registry.py  test_pdf_ai.py  test_pdf_conversions.py  test_pdf_editor.py  test_pdf_engine.py  test_pdf_safety.py  test_pdf_utils.py  test_pipeline.py  test_pipeline_workers.py  test_preview_endpoint.py  test_routers_registration.py  test_security.py  test_state_jobstore.py  test_upload_streaming.py
